test/functions/deitz/test_bad_function.good
test_bad_function.chpl:5: error: unresolved call 'foo(2.0)'
test_bad_function.chpl:1: note: candidates are: foo(i: int)
