test/functions/deitz/test_bad_function.chpl
function foo(i : integer) {
  writeln(i);
}

foo(2.0);
